@@ -6,6 +6,8 @@ version 0.58:
 	* Better applet transparency
 	* Option to raise buddy list on signons/signoffs
 	* Formatting of incoming MSN messages	
+	* Get Info from menu multiple-account-aware (thanks
+	  Brian Bernas)
 
 version 0.57 (04/25/2002):
 	* New authorization method for Yahoo!
